Fixed some UI bugs on mobile: tags on strength score cards, template screen modal widths and positioning of template screen modals glitching

--- a/src/css/cards.scss
+++ b/src/css/cards.scss
@@ -1054,3 +1054,13 @@
     }
 
 }
+
+@media (max-width: 479px) {
+    .card-strength-score-full-body {
+        .container-levels {
+            .level {
+                font-size: var(--body-text-x-small);
+            }
+        }
+    }
+}
